@@ -7,15 +7,16 @@ import java.util.*;
 import java.util.stream.Collectors;
 
 import de.uka.ilkd.key.java.Services;
-import de.uka.ilkd.key.java.abstraction.KeYJavaType;
-import de.uka.ilkd.key.java.abstraction.PrimitiveType;
-import de.uka.ilkd.key.java.abstraction.Type;
+import de.uka.ilkd.key.java.ast.abstraction.KeYJavaType;
+import de.uka.ilkd.key.java.ast.abstraction.PrimitiveType;
+import de.uka.ilkd.key.java.ast.abstraction.Type;
 import de.uka.ilkd.key.ldt.JavaDLTheory;
 import de.uka.ilkd.key.logic.*;
 import de.uka.ilkd.key.logic.op.*;
 import de.uka.ilkd.key.logic.sort.GenericSort;
+import de.uka.ilkd.key.logic.sort.ParametricSortInstance;
 import de.uka.ilkd.key.logic.sort.ProgramSVSort;
-import de.uka.ilkd.key.nparser.KeYParser;
+import de.uka.ilkd.key.nparser.JavaKeYParser;
 import de.uka.ilkd.key.nparser.varexp.ArgumentType;
 import de.uka.ilkd.key.nparser.varexp.TacletBuilderCommand;
 import de.uka.ilkd.key.nparser.varexp.TacletBuilderManipulators;
@@ -26,10 +27,8 @@ import de.uka.ilkd.key.rule.conditions.TypeResolver;
 import de.uka.ilkd.key.rule.tacletbuilder.*;
 import de.uka.ilkd.key.util.parsing.BuildingException;
 
-import org.key_project.logic.Choice;
-import org.key_project.logic.ChoiceExpr;
-import org.key_project.logic.Name;
-import org.key_project.logic.Namespace;
+import org.key_project.logic.*;
+import org.key_project.logic.op.Function;
 import org.key_project.logic.op.QuantifiableVariable;
 import org.key_project.logic.op.sv.SchemaVariable;
 import org.key_project.logic.sort.Sort;
@@ -41,7 +40,6 @@ import org.key_project.prover.sequent.Sequent;
 import org.key_project.prover.sequent.SequentFormula;
 import org.key_project.util.collection.*;
 
-import antlr.RecognitionException;
 import org.antlr.v4.runtime.ParserRuleContext;
 import org.antlr.v4.runtime.RuleContext;
 import org.antlr.v4.runtime.Token;
@@ -61,6 +59,9 @@ public class TacletPBuilder extends ExpressionBuilder {
     private Map<Taclet, TacletBuilder<? extends Taclet>> taclet2Builder = new HashMap<>();
 
     private boolean axiomMode;
+
+    /// Set to `true` iff we are in an `\addrules` section
+    private boolean addRulesMode;
 
     private final List<Taclet> topLevelTaclets = new ArrayList<>(2048);
 
@@ -85,7 +86,7 @@ public class TacletPBuilder extends ExpressionBuilder {
     }
 
     @Override
-    public Object visitDecls(KeYParser.DeclsContext ctx) {
+    public Object visitDecls(JavaKeYParser.DeclsContext ctx) {
         mapOf(ctx.schema_var_decls());
         mapOf(ctx.rulesOrAxioms());
         mapOf(ctx.datatype_decls());
@@ -93,7 +94,7 @@ public class TacletPBuilder extends ExpressionBuilder {
     }
 
     @Override
-    public Object visitRulesOrAxioms(KeYParser.RulesOrAxiomsContext ctx) {
+    public Object visitRulesOrAxioms(JavaKeYParser.RulesOrAxiomsContext ctx) {
         enableJavaSchemaMode();
         if (ctx.RULES() != null) {
             axiomMode = false;
@@ -110,7 +111,7 @@ public class TacletPBuilder extends ExpressionBuilder {
     }
 
     @Override
-    public Object visitOne_schema_modal_op_decl(KeYParser.One_schema_modal_op_declContext ctx) {
+    public Object visitOne_schema_modal_op_decl(JavaKeYParser.One_schema_modal_op_declContext ctx) {
         ImmutableSet<JModality.JavaModalityKind> modalities = DefaultImmutableSet.nil();
         Sort sort = accept(ctx.sort);
         if (sort != null && sort != JavaDLTheory.FORMULA) {
@@ -129,7 +130,7 @@ public class TacletPBuilder extends ExpressionBuilder {
     }
 
     @Override
-    public TacletBuilder<?> visitTriggers(KeYParser.TriggersContext ctx) {
+    public TacletBuilder<?> visitTriggers(JavaKeYParser.TriggersContext ctx) {
         String id = (String) ctx.id.accept(this);
         JOperatorSV triggerVar = (JOperatorSV) schemaVariables().lookup(new Name(id));
         if (triggerVar == null) {
@@ -138,13 +139,13 @@ public class TacletPBuilder extends ExpressionBuilder {
         TacletBuilder<?> b = peekTBuilder();
         JTerm t = accept(ctx.t);
         List<JTerm> avoidConditions = mapOf(ctx.avoidCond);
-        b.setTrigger(new Trigger(triggerVar, t, ImmutableList.fromList(avoidConditions)));
+        b.setTrigger(new Trigger(triggerVar, t, ImmutableList.<Term>fromList(avoidConditions)));
         return null;
     }
 
     @Override
-    public Taclet visitTaclet(KeYParser.TacletContext ctx) {
-        Sequent ifSeq = JavaDLSequentKit.getInstance().getEmptySequent();
+    public Taclet visitTaclet(JavaKeYParser.TacletContext ctx) {
+        Sequent assumesSeq = JavaDLSequentKit.getInstance().getEmptySequent();
         ImmutableSet<TacletAnnotation> tacletAnnotations = DefaultImmutableSet.nil();
         if (ctx.LEMMA() != null) {
             tacletAnnotations = tacletAnnotations.add(TacletAnnotation.LEMMA);
@@ -164,16 +165,18 @@ public class TacletPBuilder extends ExpressionBuilder {
             TacletBuilder<?> b = createTacletBuilderFor(null, ApplicationRestriction.NONE, ctx);
             currentTBuilder.push(b);
             SequentFormula sform = new SequentFormula(form);
-            Sequent addSeq = JavaDLSequentKit.createAnteSequent(ImmutableSLList.singleton(sform));
-            ImmutableList<Taclet> noTaclets = ImmutableSLList.nil();
+            Sequent addSeq = JavaDLSequentKit.createAnteSequent(ImmutableList.singleton(sform));
+            ImmutableList<Taclet> noTaclets = ImmutableList.nil();
             DefaultImmutableSet<SchemaVariable> noSV = DefaultImmutableSet.nil();
-            addGoalTemplate(null, null, addSeq, noTaclets, noSV, null, ctx);
+            addGoalTemplate(null, null, addSeq, noTaclets, noSV, null, null, ctx);
             b.setName(new Name(name));
             b.setChoices(choices);
             b.setAnnotations(tacletAnnotations);
-            b.setOrigin(BuilderHelpers.getPosition(ctx));
             Taclet r = b.getTaclet();
-            registerTaclet(ctx, r);
+            String doc = processDocumentation(ctx.doc);
+            String origin = BuilderHelpers.getPosition(ctx);
+
+            registerTaclet(ctx, r, doc, origin);
             currentTBuilder.pop();
             return r;
         }
@@ -182,18 +185,36 @@ public class TacletPBuilder extends ExpressionBuilder {
         setSchemaVariables(new Namespace<>(schemaVariables()));
         mapOf(ctx.one_schema_var_decl());
 
-        if (ctx.ifSeq != null) {
-            ifSeq = accept(ctx.ifSeq);
+        if (ctx.assumesSeq != null) {
+            assumesSeq = accept(ctx.assumesSeq);
         }
 
-        @Nullable
         Object find = accept(ctx.find);
-        Sequent seq = find instanceof Sequent ? (Sequent) find : null;
+        Sequent seq = (find instanceof Sequent s) ? s : null;
 
         var applicationRestriction = ApplicationRestriction.NONE;
-        if (!ctx.SAMEUPDATELEVEL().isEmpty()) {
-            applicationRestriction =
-                applicationRestriction.combine(ApplicationRestriction.SAME_UPDATE_LEVEL);
+        if (!ctx.IGNOREUPDATELEVEL().isEmpty() && !ctx.SAMEUPDATELEVEL().isEmpty()) {
+            semanticError(ctx,
+                "\\sameUpdateLevel and \\ignoreUpdateLevel cannot be set on the same taclet.");
+        }
+        if (addRulesMode && ctx.IGNOREUPDATELEVEL().isEmpty() || ctx.IGNOREUPDATELEVEL().isEmpty()
+                || !ctx.SAMEUPDATELEVEL().isEmpty()) {
+            // SAME_UPDATE_LEVEL is the default, but it's only set automatically when \add or
+            // \assumes is present, or we are in \addrules and \ignoreUpdateLevel is not set. It can
+            // also be set by hand.
+            boolean sameUpdLvl = addRulesMode && ctx.IGNOREUPDATELEVEL().isEmpty()
+                    || ctx.assumesSeq != null || !ctx.SAMEUPDATELEVEL().isEmpty();
+            if (!sameUpdLvl && ctx.goalspecs().goalspecwithoption() != null) {
+                for (var gt : ctx.goalspecs().goalspecwithoption()) {
+                    if (gt.goalspec().addSeq != null) {
+                        sameUpdLvl = true;
+                        break;
+                    }
+                }
+            }
+            if (sameUpdLvl)
+                applicationRestriction =
+                    applicationRestriction.combine(ApplicationRestriction.SAME_UPDATE_LEVEL);
         }
         if (!ctx.INSEQUENTSTATE().isEmpty()) {
             applicationRestriction =
@@ -210,17 +231,18 @@ public class TacletPBuilder extends ExpressionBuilder {
 
         TacletBuilder<?> b = createTacletBuilderFor(find, applicationRestriction, ctx);
         currentTBuilder.push(b);
-        b.setIfSequent(ifSeq);
+        b.setAssumesSequent(assumesSeq);
         b.setName(new Name(name));
         accept(ctx.goalspecs());
         mapOf(ctx.varexplist());
         accept(ctx.modifiers());
         b.setChoices(choices);
         b.setAnnotations(tacletAnnotations);
-        b.setOrigin(BuilderHelpers.getPosition(ctx));
+        String origin = BuilderHelpers.getPosition(ctx);
         try {
             Taclet r = peekTBuilder().getTaclet();
-            registerTaclet(ctx, r);
+            String doc = processDocumentation(ctx.doc);
+            registerTaclet(ctx, r, doc, origin);
             setSchemaVariables(schemaVariables().parent());
             currentTBuilder.pop();
             return r;
@@ -229,7 +251,7 @@ public class TacletPBuilder extends ExpressionBuilder {
         }
     }
 
-    private void registerTaclet(KeYParser.Datatype_declContext ctx, TacletBuilder<?> tb) {
+    private void registerTaclet(JavaKeYParser.Datatype_declContext ctx, TacletBuilder<?> tb) {
         var taclet = tb.getTaclet();
         taclet2Builder.put(taclet, peekTBuilder());
         topLevelTaclets.add(taclet);
@@ -237,8 +259,11 @@ public class TacletPBuilder extends ExpressionBuilder {
             ctx.start.getTokenSource().getSourceName(), ctx.start.getLine());
     }
 
-    private void registerTaclet(ParserRuleContext ctx, Taclet taclet) {
+    private void registerTaclet(ParserRuleContext ctx, Taclet taclet,
+            @Nullable String documentation, @Nullable String origin) {
         taclet2Builder.put(taclet, peekTBuilder());
+        docsSpace().setDocumentation(taclet, documentation);
+        docsSpace().setOrigin(taclet, origin);
         LOGGER.trace("Taclet announced: \"{}\" from {}:{}", taclet.name(),
             ctx.start.getTokenSource().getSourceName(), ctx.start.getLine());
     }
@@ -249,25 +274,39 @@ public class TacletPBuilder extends ExpressionBuilder {
 
 
     @Override
-    public Object visitDatatype_decl(KeYParser.Datatype_declContext ctx) {
-        var tbAx = createAxiomTaclet(ctx);
+    public Object visitDatatype_decl(JavaKeYParser.Datatype_declContext ctx) {
+        var genParams = ctx.formal_sort_param_decls() == null ? null
+                : visitFormal_sort_param_decls(ctx.formal_sort_param_decls());
+        final Sort sort;
+        if (genParams != null) {
+            var psd = namespaces().parametricSorts().lookup(ctx.name.getText());
+            assert psd != null;
+            ImmutableList<GenericArgument> args = ImmutableList.nil();
+            for (int i = psd.getParameters().size() - 1; i >= 0; i--) {
+                args = args.prepend(new GenericArgument(psd.getParameters().get(i).sort()));
+            }
+            sort = ParametricSortInstance.get(psd, args, services);
+        } else {
+            sort = sorts().lookup(ctx.name.getText());
+        }
+
+        var tbAx = createAxiomTaclet(ctx, sort);
         registerTaclet(ctx, tbAx);
 
-        var tbInd = createInductionTaclet(ctx);
+        var tbInd = createInductionTaclet(ctx, sort);
         registerTaclet(ctx, tbInd);
 
-        var tbSplit = createConstructorSplit(ctx);
+        var tbSplit = createConstructorSplit(ctx, sort);
         registerTaclet(ctx, tbSplit);
 
-        Sort dtSort = namespaces().sorts().lookup(ctx.name.getText());
         for (var constructor : ctx.datatype_constructor()) {
             for (int i = 0; i < constructor.sortId().size(); i++) {
                 var argName = constructor.argName.get(i).getText();
 
-                var tbDeconstructor = createDeconstructorTaclet(constructor, argName, i);
+                var tbDeconstructor = createDeconstructorTaclet(constructor, argName, i, sort);
                 registerTaclet(ctx, tbDeconstructor);
 
-                var tbDeconsEq = createDeconstructorEQTaclet(constructor, argName, i, dtSort);
+                var tbDeconsEq = createDeconstructorEQTaclet(constructor, argName, i, sort);
                 registerTaclet(ctx, tbDeconsEq);
             }
         }
@@ -276,12 +315,15 @@ public class TacletPBuilder extends ExpressionBuilder {
     }
 
     private TacletBuilder<? extends Taclet> createDeconstructorTaclet(
-            KeYParser.Datatype_constructorContext constructor, String argName, int argIndex) {
+            JavaKeYParser.Datatype_constructorContext constructor, String argName, int argIndex,
+            Sort dtSort) {
         var tacletBuilder = new RewriteTacletBuilder<>();
         tacletBuilder
-                .setName(new Name(String.format("%s_Dec_%s", argName, constructor.name.getText())));
+                .setName(new Name(String.format("DT_%s#Dec_%s#%s", dtSort.name(), argName,
+                    constructor.name.getText())));
         tacletBuilder.setDisplayName(
-            String.format("%s_Deconstruct_%s", argName, constructor.name.getText()));
+            String.format("DT %s Deconstructor %s (for %s)", dtSort.name(), argName,
+                constructor.name.getText()));
 
         var schemaVariables = new JOperatorSV[constructor.argName.size()];
         var args = new JTerm[constructor.argName.size()];
@@ -297,27 +339,28 @@ public class TacletPBuilder extends ExpressionBuilder {
             args[i] = tb.var(sv);
         }
 
-        var function = namespaces().functions().lookup(argName);
-        var consFn = namespaces().functions().lookup(constructor.name.getText());
+        var function = getPossiblyParametricFunction(argName, dtSort);
+        var consFn = getPossiblyParametricFunction(constructor.name.getText(), dtSort);
 
         // Find, e.g, tail(Cons(head_sv, tail_sv))
         tacletBuilder.setFind(tb.func(function, tb.func(consFn, args)));
         tacletBuilder.addTacletGoalTemplate(
             new RewriteTacletGoalTemplate(tb.var(schemaVariables[argIndex])));
-        tacletBuilder.setApplicationRestriction(
-            new ApplicationRestriction(ApplicationRestriction.SAME_UPDATE_LEVEL));
+        tacletBuilder.addRuleSet(ruleSets().lookup(new Name("simplify")));
 
         return tacletBuilder;
     }
 
     private TacletBuilder<? extends Taclet> createDeconstructorEQTaclet(
-            KeYParser.Datatype_constructorContext constructor, String argName, int argIndex,
+            JavaKeYParser.Datatype_constructorContext constructor, String argName, int argIndex,
             Sort dtSort) {
         var tacletBuilder = new RewriteTacletBuilder<>();
         tacletBuilder.setName(
-            new Name(String.format("%s_DecEQ_%s", argName, constructor.name.getText())));
+            new Name(String.format("DT_%s#Dec_%s#%s#EQ", dtSort.name(), argName,
+                constructor.name.getText())));
         tacletBuilder.setDisplayName(
-            String.format("%s_DeconstructEQ_%s", argName, constructor.name.getText()));
+            String.format("DT %s Deconstructor %s (for %s)", dtSort.name(), argName,
+                constructor.name.getText()));
 
         var schemaVariables = new JOperatorSV[constructor.argName.size()];
         var args = new JTerm[constructor.argName.size()];
@@ -333,30 +376,48 @@ public class TacletPBuilder extends ExpressionBuilder {
             args[i] = tb.var(sv);
         }
 
-        var function = namespaces().functions().lookup(argName);
-        var consFn = namespaces().functions().lookup(constructor.name.getText());
+        var function = getPossiblyParametricFunction(argName, dtSort);
+        var consFn = getPossiblyParametricFunction(constructor.name.getText(), dtSort);
 
         var x = declareSchemaVariable(constructor, argName + "_x", dtSort, false, false, false,
             new SchemaVariableModifierSet.TermSV());
         var res = schemaVariables[argIndex];
 
         tacletBuilder.setFind(tb.func(function, tb.var(x)));
-        tacletBuilder.setIfSequent(JavaDLSequentKit.createAnteSequent(
-            ImmutableSLList
-                    .singleton(new SequentFormula(tb.equals(tb.var(x), tb.func(consFn, args))))));
+        tacletBuilder.setAssumesSequent(JavaDLSequentKit.createAnteSequent(
+            ImmutableList
+                    .singleton(new SequentFormula(tb.equals(tb.func(consFn, args), tb.var(x))))));
         tacletBuilder.addTacletGoalTemplate(new RewriteTacletGoalTemplate(tb.var(res)));
         tacletBuilder.setApplicationRestriction(
             new ApplicationRestriction(ApplicationRestriction.SAME_UPDATE_LEVEL));
+        tacletBuilder.addRuleSet(ruleSets().lookup(new Name("simplify")));
 
         return tacletBuilder;
     }
 
+    private Function getPossiblyParametricFunction(String name, Sort sort) {
+        var fn = functions().lookup(name);
+        if (fn != null)
+            return fn;
+        var psi = (ParametricSortInstance) sort;
+        var pfn = namespaces().parametricFunctions().lookup(name);
+        assert pfn != null;
+        return ParametricFunctionInstance.get(pfn, psi.getArgs(), services);
+    }
+
+    private Sort getPossiblyParametricSort(String name, Sort sort) {
+        var s = sorts().lookup(name);
+        if (s != null)
+            return s;
+        var psi = (ParametricSortInstance) sort;
+        var ps = namespaces().parametricSorts().lookup(name);
+        assert ps != null;
+        return ParametricSortInstance.get(ps, psi.getArgs(), services);
+    }
 
     private TacletBuilder<? extends Taclet> createInductionTaclet(
-            KeYParser.Datatype_declContext ctx) {
+            JavaKeYParser.Datatype_declContext ctx, Sort sort) {
         var tacletBuilder = new NoFindTacletBuilder();
-        tacletBuilder.setName(new Name(String.format("%s_Ind", ctx.name.getText())));
-        final var sort = sorts().lookup(ctx.name.getText());
         var phi = declareSchemaVariable(ctx, "phi", JavaDLTheory.FORMULA, true,
             false, false, new SchemaVariableModifierSet.FormulaSV());
         var tb = services.getTermBuilder();
@@ -369,35 +430,45 @@ public class TacletPBuilder extends ExpressionBuilder {
                 .map(it -> createGoalDtConstructor(it, qvar, tb.var(phi), sort))
                 .collect(Collectors.toList());
 
+        for (var c : cases) {
+            if (c.vars == null)
+                continue;
+            for (var v : c.vars) {
+                tacletBuilder.addVarsNotFreeIn((SchemaVariable) v, phi);
+            }
+        }
+
         var use = tb.all(qvar, tb.var(phi));
         var useCase = new TacletGoalTemplate(
-            JavaDLSequentKit.createAnteSequent(ImmutableSLList.singleton(new SequentFormula(use))),
-            ImmutableSLList.nil());
+            JavaDLSequentKit.createAnteSequent(ImmutableList.singleton(new SequentFormula(use))),
+            ImmutableList.nil());
         useCase.setName("Use case of " + ctx.name.getText());
-        cases.add(useCase);
+        cases.add(new GoalTemplAndVars(useCase, null));
 
-        cases.forEach(tacletBuilder::addTacletGoalTemplate);
-        tacletBuilder.setDisplayName("Induction_for_" + sort.name());
+        cases.stream().map(GoalTemplAndVars::tgt).forEach(tacletBuilder::addTacletGoalTemplate);
+        tacletBuilder.setName(new Name(String.format("DT_%s_Induction", sort.name())));
+        tacletBuilder.setDisplayName(String.format("DT %s Induction", sort.name()));
         return tacletBuilder;
     }
 
-    private TacletGoalTemplate createGoalDtConstructor(KeYParser.Datatype_constructorContext it,
+    private GoalTemplAndVars createGoalDtConstructor(JavaKeYParser.Datatype_constructorContext it,
             VariableSV qvar, JTerm var, Sort sort) {
         var constr = createQuantifiedFormula(it, qvar, var, sort);
         var goal = new TacletGoalTemplate(
             JavaDLSequentKit
-                    .createSuccSequent(ImmutableSLList.singleton(new SequentFormula(constr))),
-            ImmutableSLList.nil());
+                    .createSuccSequent(ImmutableList.singleton(new SequentFormula(constr.term))),
+            ImmutableList.nil());
         goal.setName(it.getText());
-        return goal;
+        return new GoalTemplAndVars(goal, constr.vars);
     }
 
+    private record GoalTemplAndVars(TacletGoalTemplate tgt,
+            @Nullable List<QuantifiableVariable> vars) {
+    }
 
     private TacletBuilder<NoFindTaclet> createAxiomTaclet(
-            KeYParser.Datatype_declContext ctx) {
+            JavaKeYParser.Datatype_declContext ctx, Sort sort) {
         var tacletBuilder = new NoFindTacletBuilder();
-        tacletBuilder.setName(new Name(String.format("%s_Axiom", ctx.name.getText())));
-        final var sort = sorts().lookup(ctx.name.getText());
         var phi = declareSchemaVariable(ctx, "phi", JavaDLTheory.FORMULA, true,
             false, false, new SchemaVariableModifierSet.FormulaSV());
         var tb = services.getTermBuilder();
@@ -408,32 +479,41 @@ public class TacletPBuilder extends ExpressionBuilder {
 
         var cases = ctx.datatype_constructor().stream()
                 .map(it -> createQuantifiedFormula(it, qvar, tb.var(phi), sort))
-                .collect(Collectors.toList());
+                .toList();
 
-        var axiom = tb.equals(find, tb.and(cases));
+        for (var c : cases) {
+            if (c.vars == null)
+                continue;
+            for (var v : c.vars) {
+                tacletBuilder.addVarsNotFreeIn((SchemaVariable) v, phi);
+            }
+        }
+
+        var axiom = tb.equals(find, tb.and(cases.stream().map(TermAndVars::term).toList()));
 
         var goal = new TacletGoalTemplate(
             JavaDLSequentKit
-                    .createAnteSequent(ImmutableSLList.singleton(new SequentFormula(axiom))),
-            ImmutableSLList.nil());
+                    .createAnteSequent(ImmutableList.singleton(new SequentFormula(axiom))),
+            ImmutableList.nil());
         tacletBuilder.addTacletGoalTemplate(goal);
 
-        tacletBuilder.setDisplayName("Axiom_for_" + sort.name());
+        tacletBuilder.setName(new Name(String.format("DT_%s_Axiom", sort.name())));
+        tacletBuilder.setDisplayName(String.format("DT %s Axiom", sort.name()));
         return tacletBuilder;
     }
 
-    private JTerm createQuantifiedFormula(KeYParser.Datatype_constructorContext context,
+    private TermAndVars createQuantifiedFormula(JavaKeYParser.Datatype_constructorContext context,
             QuantifiableVariable qvX, JTerm phi, Sort dt) {
         var tb = services.getTermBuilder();
-        var fn = functions().lookup(context.name.getText());
+        var fn = getPossiblyParametricFunction(context.name.getText(), dt);
         if (context.argName.isEmpty())
-            return tb.subst(qvX, tb.func(fn), phi);
+            return new TermAndVars(tb.subst(qvX, tb.func(fn), phi), null);
 
         var args = new JTerm[context.argName.size()];
 
         var argSort =
             context.argSort.stream()
-                    .map(it -> sorts().lookup(it.getText()))
+                    .map(it -> getPossiblyParametricSort(it.simple_ident_dots().getText(), dt))
                     .toList();
         var argNames =
             context.argName.stream()
@@ -443,7 +523,8 @@ public class TacletPBuilder extends ExpressionBuilder {
         var ind = new ArrayList<JTerm>(args.length);
 
         for (int i = 0; i < argSort.size(); i++) {
-            final var qv = new LogicVariable(new Name(argNames.get(i)), argSort.get(i));
+            final var qv =
+                SchemaVariableFactory.createVariableSV(new Name(argNames.get(i)), argSort.get(i));
             qvs.add(qv);
             args[i] = services.getTermFactory().createTerm(qvs.get(i));
 
@@ -453,25 +534,30 @@ public class TacletPBuilder extends ExpressionBuilder {
         }
 
         if (ind.isEmpty()) {
-            return tb.all(qvs, tb.func(fn, args));
+            return new TermAndVars(tb.all(qvs, tb.subst(qvX, tb.func(fn, args), phi)), qvs);
         } else {
             var base = tb.and(ind);
-            return tb.all(qvs, tb.imp(base, tb.subst(qvX, tb.func(fn, args), phi)));
+            return new TermAndVars(tb.all(qvs, tb.imp(base, tb.subst(qvX, tb.func(fn, args), phi))),
+                qvs);
         }
     }
 
+    private record TermAndVars(JTerm term, @Nullable List<QuantifiableVariable> vars) {
+    }
+
     private RewriteTacletBuilder<RewriteTaclet> createConstructorSplit(
-            KeYParser.Datatype_declContext ctx) {
+            JavaKeYParser.Datatype_declContext ctx, Sort sort) {
         final var tb = services.getTermBuilder();
 
         final String prefix = ctx.name.getText() + "_";
 
         Map<String, JTerm> variables = new HashMap<>();
-        for (KeYParser.Datatype_constructorContext context : ctx.datatype_constructor()) {
+        for (JavaKeYParser.Datatype_constructorContext context : ctx.datatype_constructor()) {
             for (int i = 0; i < context.argName.size(); i++) {
                 var name = context.argName.get(i).getText();
-                var sort = sorts().lookup(context.argSort.get(i).getText());
-                var sv = declareSchemaVariable(ctx, prefix + name, sort,
+                var argSort = getPossiblyParametricSort(
+                    context.argSort.get(i).simple_ident_dots().getText(), sort);
+                var sv = declareSchemaVariable(ctx, prefix + name, argSort,
                     false, true, false,
                     new SchemaVariableModifierSet.TermSV());
                 variables.put(name, tb.var(sv));
@@ -481,24 +567,23 @@ public class TacletPBuilder extends ExpressionBuilder {
         final var b = new RewriteTacletBuilder<>();
         b.setApplicationRestriction(
             new ApplicationRestriction(ApplicationRestriction.SAME_UPDATE_LEVEL));
-        final var sort = sorts().lookup(ctx.name.getText());
 
-        b.setName(new Name(sort.name() + "_ctor_split"));
-        b.setDisplayName("case distinction of " + sort.name());
+        b.setName(new Name("DT_" + sort.name() + "_ctor_split"));
+        b.setDisplayName(String.format("DT %s case distinction", sort.name()));
 
         var phi = declareSchemaVariable(ctx, "var", sort,
             false, false, false,
             new SchemaVariableModifierSet.TermSV());
         b.setFind(tb.var(phi));
-        for (KeYParser.Datatype_constructorContext context : ctx.datatype_constructor()) {
-            var func = functions().lookup(context.name.getText());
+        for (JavaKeYParser.Datatype_constructorContext context : ctx.datatype_constructor()) {
+            var func = getPossiblyParametricFunction(context.name.getText(), sort);
             JTerm[] args = new JTerm[context.argName.size()];
             for (int i = 0; i < args.length; i++) {
                 args[i] = variables.get(context.argName.get(i).getText());
             }
-            Sequent addedSeq = JavaDLSequentKit.createAnteSequent(ImmutableSLList
+            Sequent addedSeq = JavaDLSequentKit.createAnteSequent(ImmutableList
                     .singleton(new SequentFormula(tb.equals(tb.var(phi), tb.func(func, args)))));
-            TacletGoalTemplate goal = new TacletGoalTemplate(addedSeq, ImmutableSLList.nil());
+            TacletGoalTemplate goal = new TacletGoalTemplate(addedSeq, ImmutableList.nil());
             goal.setName("#var = " + context.name.getText());
             b.addTacletGoalTemplate(goal);
         }
@@ -506,7 +591,7 @@ public class TacletPBuilder extends ExpressionBuilder {
     }
 
     @Override
-    public Object visitModifiers(KeYParser.ModifiersContext ctx) {
+    public Object visitModifiers(JavaKeYParser.ModifiersContext ctx) {
         TacletBuilder<?> b = peekTBuilder();
         List<RuleSet> rs = accept(ctx.rs);
         if (!ctx.NONINTERACTIVE().isEmpty()) {
@@ -521,24 +606,20 @@ public class TacletPBuilder extends ExpressionBuilder {
             b.setDisplayName(Objects.requireNonNull(accept(ctx.dname)));
         }
 
-        if (ctx.HELPTEXT() != null) { // last entry
-            b.setHelpText(accept(ctx.htext));
-        }
-
         mapOf(ctx.triggers());
         return null;
     }
 
     @Override
-    public Object visitVarexplist(KeYParser.VarexplistContext ctx) {
+    public Object visitVarexplist(JavaKeYParser.VarexplistContext ctx) {
         return mapOf(ctx.varexp());
     }
 
     @Override
-    public Object visitVarexp(KeYParser.VarexpContext ctx) {
+    public Object visitVarexp(JavaKeYParser.VarexpContext ctx) {
         boolean negated = ctx.NOT_() != null;
         String name = ctx.varexpId().getText();
-        List<KeYParser.Varexp_argumentContext> arguments = ctx.varexp_argument();
+        List<JavaKeYParser.Varexp_argumentContext> arguments = ctx.varexp_argument();
         List<TacletBuilderCommand> suitableManipulators =
             TacletBuilderManipulators.getConditionBuildersFor(name);
         List<String> parameters =
@@ -561,7 +642,7 @@ public class TacletPBuilder extends ExpressionBuilder {
     }
 
     private boolean applyManipulator(boolean negated, Object[] args,
-            TacletBuilderCommand manipulator, List<KeYParser.Varexp_argumentContext> arguments,
+            TacletBuilderCommand manipulator, List<JavaKeYParser.Varexp_argumentContext> arguments,
             List<String> parameters) {
         assert args.length == arguments.size();
         ArgumentType[] types = manipulator.getArgumentTypes();
@@ -581,18 +662,18 @@ public class TacletPBuilder extends ExpressionBuilder {
     }
 
     private Object evaluateVarcondArgument(ArgumentType expectedType, Object prevValue,
-            KeYParser.Varexp_argumentContext ctx) {
+            JavaKeYParser.Varexp_argumentContext ctx) {
         if (prevValue != null && expectedType.clazz.isAssignableFrom(prevValue.getClass())) {
             return prevValue; // previous value is of suitable type, we do not re-evaluate
         }
 
         return switch (expectedType) {
-        case TYPE_RESOLVER -> buildTypeResolver(ctx);
-        case SORT -> visitSortId(ctx.term().getText(), ctx.term());
-        case JAVA_TYPE -> getOrCreateJavaType(ctx.term().getText(), ctx);
-        case VARIABLE -> varId(ctx, ctx.getText());
-        case STRING -> ctx.getText();
-        case TERM -> accept(ctx.term());
+            case TYPE_RESOLVER -> buildTypeResolver(ctx);
+            case SORT -> visitSortId(ctx.term().getText(), ctx.term());
+            case JAVA_TYPE -> getOrCreateJavaType(ctx.term().getText(), ctx);
+            case VARIABLE -> varId(ctx, ctx.getText());
+            case STRING -> ctx.getText();
+            case TERM -> accept(ctx.term());
         };
     }
 
@@ -639,7 +720,7 @@ public class TacletPBuilder extends ExpressionBuilder {
     }
 
 
-    public Object buildTypeResolver(KeYParser.Varexp_argumentContext ctx) {
+    public Object buildTypeResolver(JavaKeYParser.Varexp_argumentContext ctx) {
         SchemaVariable y = accept(ctx.varId());
         if (ctx.TYPEOF() != null) {
             return TypeResolver.createElementTypeResolver(y);
@@ -650,8 +731,10 @@ public class TacletPBuilder extends ExpressionBuilder {
 
         Sort s = visitSortId(ctx.term().getText(), ctx.term());
         if (s != null) {
-            if (s instanceof GenericSort) {
-                return TypeResolver.createGenericSortResolver((GenericSort) s);
+            if (s instanceof GenericSort gs) {
+                return TypeResolver.createGenericSortResolver(gs);
+            } else if (s instanceof ParametricSortInstance psi) {
+                return TypeResolver.createParametricSortResolver(psi);
             } else {
                 return TypeResolver.createNonGenericSortResolver(s);
             }
@@ -660,12 +743,12 @@ public class TacletPBuilder extends ExpressionBuilder {
     }
 
     @Override
-    public Object visitGoalspecs(KeYParser.GoalspecsContext ctx) {
+    public Object visitGoalspecs(JavaKeYParser.GoalspecsContext ctx) {
         return mapOf(ctx.goalspecwithoption());
     }
 
     @Override
-    public Object visitGoalspecwithoption(KeYParser.GoalspecwithoptionContext ctx) {
+    public Object visitGoalspecwithoption(JavaKeYParser.GoalspecwithoptionContext ctx) {
         ChoiceExpr expr = accept(ctx.option_list());
         goalChoice = expr == null ? ChoiceExpr.TRUE : expr;
         accept(ctx.goalspec());
@@ -673,7 +756,7 @@ public class TacletPBuilder extends ExpressionBuilder {
     }
 
     @Override
-    public Choice visitOption(KeYParser.OptionContext ctx) {
+    public Choice visitOption(JavaKeYParser.OptionContext ctx) {
         String choice = ctx.getText();
         Choice c = choices().lookup(choice);
         if (c == null) {
@@ -683,7 +766,7 @@ public class TacletPBuilder extends ExpressionBuilder {
     }
 
     @Override
-    public ChoiceExpr visitOption_list(KeYParser.Option_listContext ctx) {
+    public ChoiceExpr visitOption_list(JavaKeYParser.Option_listContext ctx) {
         return ctx.option_expr().stream()
                 .map(it -> (ChoiceExpr) accept(it))
                 .reduce(ChoiceExpr::and)
@@ -691,17 +774,17 @@ public class TacletPBuilder extends ExpressionBuilder {
     }
 
     @Override
-    public ChoiceExpr visitOption_expr_or(KeYParser.Option_expr_orContext ctx) {
+    public ChoiceExpr visitOption_expr_or(JavaKeYParser.Option_expr_orContext ctx) {
         return ChoiceExpr.or(accept(ctx.option_expr(0)), accept(ctx.option_expr(1)));
     }
 
     @Override
-    public ChoiceExpr visitOption_expr_paren(KeYParser.Option_expr_parenContext ctx) {
+    public ChoiceExpr visitOption_expr_paren(JavaKeYParser.Option_expr_parenContext ctx) {
         return accept(ctx.option_expr());
     }
 
     @Override
-    public ChoiceExpr visitOption_expr_prop(KeYParser.Option_expr_propContext ctx) {
+    public ChoiceExpr visitOption_expr_prop(JavaKeYParser.Option_expr_propContext ctx) {
         String category = ctx.option().cat.getText();
         String value = ctx.option().value.getText();
         String choiceStr = category + ":" + value;
@@ -718,62 +801,68 @@ public class TacletPBuilder extends ExpressionBuilder {
     }
 
     @Override
-    public ChoiceExpr visitOption_expr_not(KeYParser.Option_expr_notContext ctx) {
+    public ChoiceExpr visitOption_expr_not(JavaKeYParser.Option_expr_notContext ctx) {
         return ChoiceExpr.not(accept(ctx.option_expr()));
     }
 
     @Override
-    public ChoiceExpr visitOption_expr_and(KeYParser.Option_expr_andContext ctx) {
+    public ChoiceExpr visitOption_expr_and(JavaKeYParser.Option_expr_andContext ctx) {
         return ChoiceExpr.and(accept(ctx.option_expr(0)), accept(ctx.option_expr(1)));
     }
 
     @Override
-    public Object visitGoalspec(KeYParser.GoalspecContext ctx) {
+    public Object visitGoalspec(JavaKeYParser.GoalspecContext ctx) {
         var soc = this.goalChoice;
         String name = accept(ctx.string_value());
 
         Sequent addSeq = JavaDLSequentKit.getInstance().getEmptySequent();
-        ImmutableSLList<Taclet> addRList = ImmutableSLList.nil();
+        ImmutableList<Taclet> addRList = ImmutableList.nil();
         DefaultImmutableSet<SchemaVariable> addpv = DefaultImmutableSet.nil();
 
-        @Nullable
         Object rwObj = accept(ctx.replacewith());
         if (ctx.add() != null) {
             addSeq = accept(ctx.add());
         }
         if (ctx.addrules() != null) {
+            boolean oldAddRulesMode = addRulesMode;
+            addRulesMode = true;
             addRList = accept(ctx.addrules()); // modifies goalChoice
+            addRulesMode = oldAddRulesMode;
         }
         if (ctx.addprogvar() != null) {
             addpv = accept(ctx.addprogvar());
         }
-        addGoalTemplate(name, rwObj, addSeq, addRList, addpv, soc, ctx);
+        String tag = null;
+        if (ctx.tag != null) {
+            tag = ctx.tag.getText();
+        }
+        addGoalTemplate(name, rwObj, addSeq, addRList, addpv, soc, tag, ctx);
         return null;
     }
 
     @Override
-    public Object visitReplacewith(KeYParser.ReplacewithContext ctx) {
+    public Object visitReplacewith(JavaKeYParser.ReplacewithContext ctx) {
         return accept(ctx.o);
     }
 
     @Override
-    public Object visitAdd(KeYParser.AddContext ctx) {
+    public Object visitAdd(JavaKeYParser.AddContext ctx) {
         return accept(ctx.s);
     }
 
     @Override
-    public Object visitAddrules(KeYParser.AddrulesContext ctx) {
+    public Object visitAddrules(JavaKeYParser.AddrulesContext ctx) {
         return accept(ctx.lor);
     }
 
     @Override
-    public ImmutableSet<SchemaVariable> visitAddprogvar(KeYParser.AddprogvarContext ctx) {
+    public ImmutableSet<SchemaVariable> visitAddprogvar(JavaKeYParser.AddprogvarContext ctx) {
         final Collection<? extends SchemaVariable> accept = accept(ctx.pvs);
         return Immutables.createSetFrom(Objects.requireNonNull(accept));
     }
 
     @Override
-    public ImmutableList<Taclet> visitTacletlist(KeYParser.TacletlistContext ctx) {
+    public ImmutableList<Taclet> visitTacletlist(JavaKeYParser.TacletlistContext ctx) {
         List<Taclet> taclets = mapOf(ctx.taclet());
         return ImmutableList.fromList(taclets);
     }
@@ -781,29 +870,32 @@ public class TacletPBuilder extends ExpressionBuilder {
     private @NonNull TacletBuilder<?> createTacletBuilderFor(Object find,
             ApplicationRestriction applicationRestriction,
             ParserRuleContext ctx) {
-        if (find == null) {
-            return new NoFindTacletBuilder();
-        } else if (find instanceof JTerm) {
-            return new RewriteTacletBuilder<>().setFind((JTerm) find)
-                    .setApplicationRestriction(applicationRestriction);
-        } else if (find instanceof Sequent findSeq) {
-            if (findSeq.isEmpty()) {
+        switch (find) {
+            case null -> {
                 return new NoFindTacletBuilder();
-            } else if (findSeq.antecedent().size() == 1 && findSeq.succedent().isEmpty()) {
-                AntecTacletBuilder b = new AntecTacletBuilder();
-                b.setFind(findSeq);
-                b.setApplicationRestriction(applicationRestriction);
-                return b;
-            } else if (findSeq.antecedent().isEmpty() && findSeq.succedent().size() == 1) {
-                SuccTacletBuilder b = new SuccTacletBuilder();
-                b.setFind(findSeq);
-                b.setApplicationRestriction(applicationRestriction);
-                return b;
-            } else {
-                semanticError(ctx, "Unknown find-sequent (perhaps null?):" + findSeq);
             }
-        } else {
-            semanticError(ctx, "Unknown find class type: %s", find.getClass().getName());
+            case JTerm jTerm -> {
+                return new RewriteTacletBuilder<>().setFind(jTerm)
+                        .setApplicationRestriction(applicationRestriction);
+            }
+            case Sequent findSeq -> {
+                if (findSeq.isEmpty()) {
+                    return new NoFindTacletBuilder();
+                } else if (findSeq.antecedent().size() == 1 && findSeq.succedent().isEmpty()) {
+                    AntecTacletBuilder b = new AntecTacletBuilder();
+                    b.setFind(findSeq);
+                    b.setApplicationRestriction(applicationRestriction);
+                    return b;
+                } else if (findSeq.antecedent().isEmpty() && findSeq.succedent().size() == 1) {
+                    SuccTacletBuilder b = new SuccTacletBuilder();
+                    b.setFind(findSeq);
+                    b.setApplicationRestriction(applicationRestriction);
+                    return b;
+                } else {
+                    semanticError(ctx, "Unknown find-sequent (perhaps null?):" + findSeq);
+                }
+            }
+            default -> semanticError(ctx, "Unknown find class type: %s", find.getClass().getName());
         }
 
         throw new IllegalArgumentException(
@@ -812,7 +904,7 @@ public class TacletPBuilder extends ExpressionBuilder {
 
     private void addGoalTemplate(String id, Object rwObj, Sequent addSeq,
             ImmutableList<Taclet> addRList, ImmutableSet<SchemaVariable> pvs,
-            @Nullable ChoiceExpr soc, ParserRuleContext ctx) {
+            @Nullable ChoiceExpr soc, String tag, ParserRuleContext ctx) {
         TacletBuilder<?> b = peekTBuilder();
         TacletGoalTemplate gt = null;
         if (rwObj == null) {
@@ -820,8 +912,7 @@ public class TacletPBuilder extends ExpressionBuilder {
             gt = new TacletGoalTemplate(addSeq, addRList, pvs);
         } else {
             if (b instanceof NoFindTacletBuilder) {
-                // there is a replacewith without a find.
-                throwEx(new RecognitionException(""));
+                throw new BuildingException(ctx, "there is a replacewith without a find");
             } else if (b instanceof SuccTacletBuilder || b instanceof AntecTacletBuilder) {
                 if (rwObj instanceof Sequent rwSeq) {
                     gt = new AntecSuccTacletGoalTemplate(addSeq, addRList, rwSeq, pvs);
@@ -845,6 +936,7 @@ public class TacletPBuilder extends ExpressionBuilder {
                 "Could not find a suitable goal template builder for: " + b.getClass());
         }
         gt.setName(id);
+        gt.setTag(tag);
         b.addTacletGoalTemplate(gt);
         if (soc != null) {
             b.addGoal2ChoicesMapping(gt, soc);
@@ -852,7 +944,7 @@ public class TacletPBuilder extends ExpressionBuilder {
     }
 
     @Override
-    public SchemaVariable visitVarId(KeYParser.VarIdContext ctx) {
+    public SchemaVariable visitVarId(JavaKeYParser.VarIdContext ctx) {
         String id = ctx.id.getText();
         return varId(ctx, id);
     }
@@ -867,7 +959,7 @@ public class TacletPBuilder extends ExpressionBuilder {
     }
 
     @Override
-    public Object visitOne_schema_var_decl(KeYParser.One_schema_var_declContext ctx) {
+    public Object visitOne_schema_var_decl(JavaKeYParser.One_schema_var_declContext ctx) {
         boolean makeVariableSV = false;
         boolean makeSkolemTermSV = false;
         boolean makeTermLabelSV = false;
@@ -943,7 +1035,7 @@ public class TacletPBuilder extends ExpressionBuilder {
     }
 
     @Override
-    public Object visitSchema_modifiers(KeYParser.Schema_modifiersContext ctx) {
+    public Object visitSchema_modifiers(JavaKeYParser.Schema_modifiersContext ctx) {
         SchemaVariableModifierSet mods = pop();
         List<String> ids = visitSimple_ident_comma_list(ctx.simple_ident_comma_list());
         for (String id : ids) {
@@ -956,7 +1048,7 @@ public class TacletPBuilder extends ExpressionBuilder {
     }
 
     @Override
-    public Object visitSchema_var_decls(KeYParser.Schema_var_declsContext ctx) {
+    public Object visitSchema_var_decls(JavaKeYParser.Schema_var_declsContext ctx) {
         return this.<SchemaVariable>mapOf(ctx.one_schema_var_decl());
     }
 
