@@ -4,6 +4,7 @@
 package de.uka.ilkd.key.util.pp;
 
 import java.util.ArrayList;
+import java.util.NoSuchElementException;
 
 import org.jspecify.annotations.NonNull;
 
@@ -61,7 +62,6 @@ class Printer<M> {
     }
 
     /** Accumulated result */
-    @NonNull
     String result() {
         return back.result();
     }
@@ -72,7 +72,7 @@ class Printer<M> {
     }
 
     /** write the String <code>s</code> to <code>out</code> */
-    void print(@NonNull String s) {
+    void print(String s) {
         back.print(s);
         pos += s.length();
     }
@@ -100,7 +100,7 @@ class Printer<M> {
     /**
      * write a break. <code>followingLength</code> should be the space needed by the material up to
      * the next corresponding closeBlock() or printBreak(), and is used to decide whether the
-     * current line is continues, or a new (indented) line is begun.
+     * current line is continued, or a new (indented) line is begun.
      */
     void printBreak(int width, int offset, int followingLength) {
         if (topBreak() == CONSISTENT
@@ -146,6 +146,7 @@ class Printer<M> {
         try {
             marginStack.remove(marginStack.size() - 1);
         } catch (IndexOutOfBoundsException e) {
+            // FIXME weigl: ignore this exception.
             throw new UnbalancedBlocksException();
         }
     }
@@ -153,8 +154,8 @@ class Printer<M> {
     /** return the topmost element of the space stack without popping it. */
     private int top() {
         try {
-            return marginStack.get(marginStack.size() - 1);
-        } catch (IndexOutOfBoundsException e) {
+            return marginStack.getLast();
+        } catch (NoSuchElementException e) {
             throw new UnbalancedBlocksException();
         }
     }
